[package]
name = "pallet-difficulty"
version = "4.0.0-dev"
description = "Pallet difficulty for Impact Protocol"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://impactprotocol.network"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/mendozg/impact/pallets/difficulty"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = "0.4.17"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

impact-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
