[package]
name = "pallet-rewards"
version = "4.0.0-dev"
description = "Pallet rewards for Impact Protocol"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/mendozg/impact/pallets/rewards"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git"}
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git"}
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-consensus-pow = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]