[package]
name = "account"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.1.1"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0.101", default-features = false, optional = true, features = [ "derive" ] }
sha3 = { version = "0.10", default-features = false }

# Substrate
parity-scale-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime-interface = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false }

[features]
default = [ "std" ]
std = [
	"full_crypto",
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"parity-scale-codec/std",
	"serde/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

full_crypto = [
	"blake2-rfc",
	"sp-runtime-interface/disable_target_static_assertions",
]
