[package]
name = "chain-spec-builder"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://impactprotocol.network"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.9", features = ["derive"] }
rand = "0.8"
#impact-cli = { version = "3.0.0-dev", path = "../../cli" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate", branch = "master" }
